--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <title>Pizzalicious</title>
 </head>
 <body>
-    
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">PIZZAlicious</h1>
+          <p class="lead">Baked Pizza to Fit Any Taste.</p>
+        </div>
+      </div>
 </body>
 </html>
