--- a/index.html
+++ b/index.html
@@ -8,14 +8,108 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>Pizzalicious</title>
 </head>
 <body>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 class="display-4">PIZZAlicious</h1>
-          <p class="lead">Baked Pizza to Fit Any Taste.</p>
+    <div class="card bg-dark text-white main">
+        <img src="imgs/gallery1.jpg" class="card-img" alt="...">
+        <div class="card-img-overlay">
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home</a>
+                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Mail</a>
+                </li>
+            </ul>
+          <h5 class="card-title">PIZZAlicious</h5>
+          <p class="card-text">Baked Pizza to Fit Any Taste.</p>
         </div>
-      </div>
+        <div class="alert order">
+            <h4 class="alert-heading">PIZZA Order Form!</h4>
+            <hr>
+                <form>
+                        <div class="form-row">
+                                
+                                <div class="form-group col-sm-5">
+                                  <label for="inputState">Choose Size:</label>
+                                  <select id="inputState" class="form-control">
+                                    <option selected>Choose...</option>
+                                    <option>Small</option>
+                                    <option>Medium</option>
+                                    <option>Large</option>
+                                  </select>
+                                </div>
+                        <fieldset class="form-group col-sm-7">
+                          <div class="row">
+                            <legend class="col-form-label col-sm-2">Choose Crust:</legend>
+                            <div class="col-sm-6">
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                                <label class="form-check-label" for="gridRadios1">Crispy</label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                                <label class="form-check-label" for="gridRadios2">Stuffed</label>
+                              </div>
+                              <div class="form-check ">
+                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
+                                <label class="form-check-label" for="gridRadios3"> Gliten-Free</label>
+                              </div>
+                            </div>
+                          </div>
+                        </fieldset>
+                        <div class="form-group col-sm-12">
+                                <div class="row">
+                                  <legend class="col-form-label col-sm-2">Choose Topping:</legend>
+                                  <div class="col-sm-6">
+                                        <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                                <label class="form-check-label" for="gridCheck1">Pepperoni</label>
+                                              </div>
+                                              <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                                    <label class="form-check-label" for="gridCheck1">Mushrooms</label>
+                                                  </div>
+                                                  <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                                        <label class="form-check-label" for="gridCheck1">Sausage</label>
+                                              </div>
+                                              <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                                    <label class="form-check-label" for="gridCheck1">Onions</label>
+                                                  </div>
+                                                  <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                                        <label class="form-check-label" for="gridCheck1">Extra Cheese</label>
+                                                      </div>
+                                                      <div class="form-check">
+                                                            <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                                            <label class="form-check-label" for="gridCheck1">Black Olives</label>
+                                                  </div>
+                                                  <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                                        <label class="form-check-label" for="gridCheck1">Green Peppers</label>
+                                              </div>
+                                  </div>
+                                </div>
+                            </div>
+                    </div>
+                        
+                        <div class="form-group row">
+                          <div class="col-sm-10">
+                            <button type="submit" class="btn btn-primary">Sign in</button>
+                          </div>
+                        </div> 
+                      </form>
+        </div>
+    </div>
 </body>
 </html>
