--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
             <hr>
                 <form>
                         <div class="form-row">
-                                
-                                <div class="form-group col-sm-5">
+                                <div class="form-group card col-sm-6">
                                   <label for="inputState">Choose Size:</label>
                                   <select id="inputState" class="form-control">
                                     <option selected>Choose...</option>
@@ -47,12 +46,12 @@
                                     <option>Large</option>
                                   </select>
                                 </div>
-                        <fieldset class="form-group col-sm-7">
+                        <fieldset class="form-group card col-sm-6">
                           <div class="row">
                             <legend class="col-form-label col-sm-2">Choose Crust:</legend>
                             <div class="col-sm-6">
                               <div class="form-check">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
                                 <label class="form-check-label" for="gridRadios1">Crispy</label>
                               </div>
                               <div class="form-check">
@@ -66,7 +65,7 @@
                             </div>
                           </div>
                         </fieldset>
-                        <div class="form-group col-sm-12">
+                        <div class="form-group card col-sm-12">
                                 <div class="row">
                                   <legend class="col-form-label col-sm-2">Choose Topping:</legend>
                                   <div class="col-sm-6">
