--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
                         </div> 
                       </form>
         </div>
+        <!-- Footer -->
+<footer class="page-footer font-small unique-color-dark pt-4">
+  <div class="footer-copyright text-center py-3">© 2018 Copyright: <strong>Pizzalicious.com</strong>
+  </div>
+</footer>
     </div>
 </body>
 </html>
