--- a/index.html
+++ b/index.html
@@ -31,6 +31,33 @@
             </ul>
           <h5 class="card-title">PIZZAlicious</h5>
           <p class="card-text">Baked Pizza to Fit Any Taste.</p>
+          <div class="row values">
+            <div class=" card prices col-sm-4">
+                <button type="button" class="btn btn-light deliva" data-toggle="collapse" data-target="#size"> The Prices For Each Pizza Size...</button>
+                <div id="size" class="collapse">
+                    Smaller pizza equal to 1000 <br>
+                    Medium pizza equal to 1500 <br>
+                    Larger pizza equal to 3000 <br>
+                </div>
+              </div>
+              <div class=" card prices col-sm-4">
+                  <button type="button" class="btn btn-light deliva" data-toggle="collapse" data-target="#cru">The Cost For The Crust...</button>
+                  <div id="cru" class="collapse">
+                      Crispy equal to 500 <br>
+                      Stuffed equal to 700 <br>
+                      Gliten-Free equal to 1500 <br>
+                  </div>
+                </div>
+                <div class=" card prices col-sm-4">
+                    <button type="button" class="btn btn-light deliva" data-toggle="collapse" data-target="#toppy">Pizza Topping Value...</button>
+                    <div id="toppy" class="collapse">
+                        {Pepperoni, Mushrooms,Green Peppers and Onion} equal to 1500 <br>
+                        {Extra Cheese, Sausage,Black Olives and Onions} equal to 2000 <br>
+                        {Mushrooms,Onions, Green Peppers and Black Olives} equal to 4000 <br>
+                    </div>
+                  </div>
+            </div>
+          </div>
         </div>
         <div class="alert order">
             <h4 class="alert-heading">PIZZA Order Form!</h4>
@@ -75,31 +102,15 @@
                                   <div class="col-sm-6">
                                         <div class="form-check">
                                                 <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                                <label class="form-check-label" for="gridCheck1">Pepperoni</label>
+                                                <label class="form-check-label" for="gridCheck1">Pepperoni, Mushrooms,Green Peppers and Onion</label>
                                               </div>
                                               <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                                    <label class="form-check-label" for="gridCheck1">Mushrooms</label>
+                                                    <input class="form-check-input" type="checkbox" id="gridCheck2">
+                                                    <label class="form-check-label" for="gridCheck1">Extra Cheese, Sausage,Black Olives and Onions</label>
                                                   </div>
                                                   <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                                        <label class="form-check-label" for="gridCheck1">Sausage</label>
-                                              </div>
-                                              <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                                    <label class="form-check-label" for="gridCheck1">Onions</label>
-                                                  </div>
-                                                  <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                                        <label class="form-check-label" for="gridCheck1">Extra Cheese</label>
-                                                      </div>
-                                                      <div class="form-check">
-                                                            <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                                            <label class="form-check-label" for="gridCheck1">Black Olives</label>
-                                                  </div>
-                                                  <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                                        <label class="form-check-label" for="gridCheck1">Green Peppers</label>
+                                                        <input class="form-check-input" type="checkbox" id="gridCheck3">
+                                                        <label class="form-check-label" for="gridCheck1">Mushrooms,Onions, Green Peppers and Black Olives</label>
                                               </div>
                                   </div>
                                 </div>
@@ -107,9 +118,12 @@
                     </div>
                         
                         <div class="form-group row">
-                          <div class=" btn col-sm-12">
-                            <button type="submit" id="btn" class="btn btn-secondary">Order</button>
+                          <div class=" btn col-sm-6">
+                            <button type="submit" id="check" onclick="order()" class="btn btn-secondary deliva">checkout</button>
                           </div>
+                          <div class=" btn col-sm-6">
+                              <button type="submit" id="btn" onclick="order()" class="btn btn-secondary deliva">Order</button>
+                            </div>
                         </div> 
                       </form>
         </div>
