--- a/index.html
+++ b/index.html
@@ -13,126 +13,124 @@
     <title>Pizzalicious</title>
 </head>
 <body>
-    <div class="card bg-dark text-white main">
-        <img src="imgs/gallery1.jpg" class="card-img" alt="...">
-        <div class="card-img-overlay">
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
-                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Mail</a>
-                </li>
-            </ul>
-          <h5 class="card-title">PIZZAlicious</h5>
-          <p class="card-text">Baked Pizza to Fit Any Taste.</p>
-          <div class="row values">
-            <div class=" card prices col-sm-4">
-                <button type="button" class="btn btn-light deliva" data-toggle="collapse" data-target="#size"> The Prices For Each Pizza Size...</button>
-                <div id="size" class="collapse">
-                    Smaller pizza equal to 1000 <br>
-                    Medium pizza equal to 1500 <br>
-                    Larger pizza equal to 3000 <br>
+  <div class="card bg-dark text-white main">
+    <img src="imgs/gallery1.jpg" class="card-img" alt="...">
+    <div class="card-img-overlay">
+      <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Mail</a>
+        </li>
+      </ul>
+      <h5 class="card-title">PIZZAlicious</h5>
+      <p class="card-text">Baked Pizza to Fit Any Taste.</p>
+      <div class="row values">
+        <div class=" card prices col-sm-4">
+          <button type="button" class="btn btn-light deliva" data-toggle="collapse" data-target="#size"> The Prices For Each Pizza Size...</button>
+          <div id="size" class="collapse">
+            Smaller pizza equal to 1000 <br>
+            Medium pizza equal to 1500 <br>
+            Larger pizza equal to 3000 <br>
+          </div>
+        </div>
+        <div class=" card prices col-sm-4">
+          <button type="button" class="btn btn-light deliva" data-toggle="collapse" data-target="#cru">The Cost For The Crust...</button>
+          <div id="cru" class="collapse">
+            Crispy equal to 500 <br>
+            Stuffed equal to 700 <br>
+            Gliten-Free equal to 1500 <br>
+          </div>
+        </div>
+        <div class=" card prices col-sm-4">
+          <button type="button" class="btn btn-light deliva" data-toggle="collapse" data-target="#toppy">Pizza Topping Value...</button>
+          <div id="toppy" class="collapse">
+            {Pepperoni, Mushrooms,Green Peppers and Onion} equal to 1500 <br>
+            {Extra Cheese, Sausage,Black Olives and Onions} equal to 2000 <br>
+            {Mushrooms,Onions, Green Peppers and Black Olives} equal to 4000 <br>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="alert order">
+    <h4 class="alert-heading">PIZZA Order Form!</h4>
+    <hr>
+    <form>
+      <div class="form-row">
+        <div class="form-group card col-sm-6">
+          <label for="inputState">Choose Size:</label>
+          <select id="inputState" class="form-control">
+            <option selected>Choose...</option>
+            <option>Small</option>
+            <option>Medium</option>
+            <option>Large</option>
+          </select>
+        </div>
+        <div class="form-group card col-sm-6">
+          <label for="pwd">Choose Quantity:</label>
+          <input type="number" class="form-control" min="1" id="qnty" name="Quantity">
+        </div>
+        <fieldset class="form-group card col-sm-6">
+          <div class="row">
+            <legend class="col-form-label col-sm-2">Choose Crust:</legend>
+              <div class="col-sm-6">
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
+                   <label class="form-check-label" for="gridRadios1">Crispy</label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                  <label class="form-check-label" for="gridRadios2">Stuffed</label>
+                </div>
+                <div class="form-check ">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
+                  <label class="form-check-label" for="gridRadios3"> Gliten-Free</label>
                 </div>
               </div>
-              <div class=" card prices col-sm-4">
-                  <button type="button" class="btn btn-light deliva" data-toggle="collapse" data-target="#cru">The Cost For The Crust...</button>
-                  <div id="cru" class="collapse">
-                      Crispy equal to 500 <br>
-                      Stuffed equal to 700 <br>
-                      Gliten-Free equal to 1500 <br>
-                  </div>
-                </div>
-                <div class=" card prices col-sm-4">
-                    <button type="button" class="btn btn-light deliva" data-toggle="collapse" data-target="#toppy">Pizza Topping Value...</button>
-                    <div id="toppy" class="collapse">
-                        {Pepperoni, Mushrooms,Green Peppers and Onion} equal to 1500 <br>
-                        {Extra Cheese, Sausage,Black Olives and Onions} equal to 2000 <br>
-                        {Mushrooms,Onions, Green Peppers and Black Olives} equal to 4000 <br>
-                    </div>
-                  </div>
+          </div>
+        </fieldset>
+        <div class="form-group card col-sm-6">
+          <div class="row">
+            <legend class="col-form-label col-sm-2">Choose Topping:</legend>
+            <div class="col-sm-6">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck1">
+                <label class="form-check-label" for="gridCheck1">Pepperoni, Mushrooms,Green Peppers and Onion</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck2">
+                <label class="form-check-label" for="gridCheck1">Extra Cheese, Sausage,Black Olives and Onions</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck3">
+                <label class="form-check-label" for="gridCheck1">Mushrooms,Onions, Green Peppers and Black Olives</label>
+              </div>
             </div>
           </div>
         </div>
-        <div class="alert order">
-            <h4 class="alert-heading">PIZZA Order Form!</h4>
-            <hr>
-                <form>
-                        <div class="form-row">
-                                <div class="form-group card col-sm-6">
-                                  <label for="inputState">Choose Size:</label>
-                                  <select id="inputState" class="form-control">
-                                    <option selected>Choose...</option>
-                                    <option>Small</option>
-                                    <option>Medium</option>
-                                    <option>Large</option>
-                                  </select>
-                                </div>
-                                <div class="form-group card col-sm-6">
-                                  <label for="pwd">Choose Quantity:</label>
-                                  <input type="number" class="form-control" min="1" id="qnty" name="Quantity">
-                                </div>
-                        <fieldset class="form-group card col-sm-6">
-                          <div class="row">
-                            <legend class="col-form-label col-sm-2">Choose Crust:</legend>
-                            <div class="col-sm-6">
-                              <div class="form-check">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
-                                <label class="form-check-label" for="gridRadios1">Crispy</label>
-                              </div>
-                              <div class="form-check">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                                <label class="form-check-label" for="gridRadios2">Stuffed</label>
-                              </div>
-                              <div class="form-check ">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
-                                <label class="form-check-label" for="gridRadios3"> Gliten-Free</label>
-                              </div>
-                            </div>
-                          </div>
-                        </fieldset>
-                        <div class="form-group card col-sm-6">
-                                <div class="row">
-                                  <legend class="col-form-label col-sm-2">Choose Topping:</legend>
-                                  <div class="col-sm-6">
-                                        <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                                <label class="form-check-label" for="gridCheck1">Pepperoni, Mushrooms,Green Peppers and Onion</label>
-                                              </div>
-                                              <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" id="gridCheck2">
-                                                    <label class="form-check-label" for="gridCheck1">Extra Cheese, Sausage,Black Olives and Onions</label>
-                                                  </div>
-                                                  <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" id="gridCheck3">
-                                                        <label class="form-check-label" for="gridCheck1">Mushrooms,Onions, Green Peppers and Black Olives</label>
-                                              </div>
-                                  </div>
-                                </div>
-                            </div>
-                    </div>
-                        
-                        <div class="form-group row">
-                          <div class=" btn col-sm-6">
-                            <button type="submit" id="check" onclick="order()" class="btn btn-secondary deliva">checkout</button>
-                          </div>
-                          <div class=" btn col-sm-6">
-                              <button type="submit" id="btn" onclick="order()" class="btn btn-secondary deliva">Order</button>
-                            </div>
-                        </div> 
-                      </form>
-        </div>
-        <!-- Footer -->
-<footer class="page-footer font-small unique-color-dark pt-4">
-  <div class="footer-copyright text-center py-3">© 2018 Copyright: <strong>Pizzalicious.com</strong>
+      </div>
+    </form>
+    <div class="form-group row">
+      <div class=" btn col-sm-6">
+        <button type="submit" id="check" onclick="order()" class="btn btn-secondary deliva">checkout</button>
+      </div>
+      <div class=" btn col-sm-6">
+        <button type="submit" id="btn" onclick="order()" class="btn btn-secondary deliva">Order</button>
+      </div>
+    </div> 
   </div>
-</footer>
+  <footer class="page-footer font-small unique-color-dark pt-4">
+    <div class="footer-copyright text-center py-3">
+      © 2018 Copyright: <strong>Pizzalicious.com</strong>
     </div>
+  </footer>
 </body>
 </html>
