--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           <label for="inputState">Choose Size:</label>
           <select id="inputState" class="form-control">
             <option selected>Choose...</option>
-            <option>Small</option>
-            <option>Medium</option>
-            <option>Large</option>
+            <option value="small">Small</option>
+            <option value="medium">Medium</option>
+            <option value="large">Large</option>
           </select>
         </div>
         <div class="form-group card col-sm-6">
@@ -102,15 +102,15 @@
             <legend class="col-form-label col-sm-2">Choose Topping:</legend>
             <div class="col-sm-6">
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck1">
+                <input class="form-check-input" type="checkbox" id="gridCheck1" value="top1" >
                 <label class="form-check-label" for="gridCheck1">Pepperoni, Mushrooms,Green Peppers and Onion</label>
               </div>
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck2">
+                <input class="form-check-input" type="checkbox" id="gridCheck2" value="top2" >
                 <label class="form-check-label" for="gridCheck1">Extra Cheese, Sausage,Black Olives and Onions</label>
               </div>
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck3">
+                <input class="form-check-input" type="checkbox" id="gridCheck3" value="top3" >
                 <label class="form-check-label" for="gridCheck1">Mushrooms,Onions, Green Peppers and Black Olives</label>
               </div>
             </div>
