--- a/index.html
+++ b/index.html
@@ -119,15 +119,17 @@
       </div>
     </form>
     <div class="form-group row">
-      <div class=" btn col-sm-6">
+      <!-- <div class=" btn col-sm-6">
         <button type="submit" id="check" onclick="order()" class="btn btn-secondary deliva">checkout</button>
-        <p id="price"></p>
+        <p id="price">view order:</p>
         <p id="pizzaDetails">view order:</p>
-      </div>
+      </div> -->
       <div class=" btn col-sm-6">
-        <button type="submit" id="btn" onclick="order()" class="btn btn-secondary deliva">Order</button>
-        <p id="pizzaDetail"></p>
-        
+        <button type="submit" id="btn"  class="btn btn-secondary deliva">Order</button>
+       
+        <p >view order:</p>
+        <p id="price"></p>
+        <!-- <p id="pizzaDetail"></p> -->
       </div>
     </div> 
   </div>
