--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     </form>
     <div class="form-group row">
       <div class=" btn col-sm-6">
-        <button type="submit" id="check" onclick="order()" class="btn btn-secondary deliva">checkout</button>
-        <!-- <p id="price">view order:</p>
-        <p id="pizzaDetails">view order:</p> -->
+        <button type="submit" id="checkout" onclick="order()" class="btn btn-secondary deliva">checkout</button>
+        <p >view deriva:</p>
+        <p id="check"></p>
       </div>
       <div class=" btn col-sm-6">
         <button type="submit" id="btn"  class="btn btn-secondary deliva">Order</button>
